more temp changes

--- a/images.qrc
+++ b/images.qrc
@@ -5,5 +5,114 @@
         <file>images/pass.png</file>
         <file>images/Running.gif</file>
         <file>images/barcode.png</file>
+        <file>images/about_btn_selected.png</file>
+        <file>images/about_btn.png</file>
+        <file>images/about.png</file>
+        <file>images/auto_selected.png</file>
+        <file>images/auto_unselect.png</file>
+        <file>images/average_frame_box.png</file>
+        <file>images/bg.png</file>
+        <file>images/camera_box.png</file>
+        <file>images/camera_btn.png</file>
+        <file>images/camera_selected.png</file>
+        <file>images/cancel_selected.png</file>
+        <file>images/cancel.png</file>
+        <file>images/capture.png</file>
+        <file>images/close_selected.png</file>
+        <file>images/close_tab.png</file>
+        <file>images/close.png</file>
+        <file>images/color_comp_box.png</file>
+        <file>images/color_comp_dropdown.png</file>
+        <file>images/compression_quality_box.png</file>
+        <file>images/current_position_box.png</file>
+        <file>images/default_selected.png</file>
+        <file>images/default.png</file>
+        <file>images/device_box_bck.png</file>
+        <file>images/device_box.png</file>
+        <file>images/device_dropdown.png</file>
+        <file>images/dn-arrow.png</file>
+        <file>images/down_arrow.png</file>
+        <file>images/exit.png</file>
+        <file>images/exposure_box.png</file>
+        <file>images/f_wversion_selected.png</file>
+        <file>images/flash_flash_selected.png</file>
+        <file>images/flash_flash.png</file>
+        <file>images/flash_torch_selected.png</file>
+        <file>images/flash_torch.png</file>
+        <file>images/focus_position_box.png</file>
+        <file>images/focus_selected.png</file>
+        <file>images/frame_dropped_box.png</file>
+        <file>images/frame_played_box.png</file>
+        <file>images/frame_rate_box.png</file>
+        <file>images/get_gpi_selected.png</file>
+        <file>images/gpi_no_box.png</file>
+        <file>images/gpi_no_dropdown.png</file>
+        <file>images/gpi_no_drowdown.png</file>
+        <file>images/gpo_no_box.png</file>
+        <file>images/gpo_no_drowdown.png</file>
+        <file>images/handle.png</file>
+        <file>images/hardware_default_selected.png</file>
+        <file>images/hardware_default.png</file>
+        <file>images/Horizontal_left_arrow.png</file>
+        <file>images/Horizontal_right_arrow.png</file>
+        <file>images/Horizontal_Scroll_base.png</file>
+        <file>images/Horizontal_Scroller.png</file>
+        <file>images/image_format_box.png</file>
+        <file>images/image_formst_dropdown.png</file>
+        <file>images/image_qualitysettings.png</file>
+        <file>images/layer_0.png</file>
+        <file>images/logo.png</file>
+        <file>images/ok_selected.png</file>
+        <file>images/ok.png</file>
+        <file>images/open_folder.png</file>
+        <file>images/open_tab.png</file>
+        <file>images/output_box_bck.png</file>
+        <file>images/output_box.png</file>
+        <file>images/output_dropdown.png</file>
+        <file>images/output_size_box.png</file>
+        <file>images/output_size_dropdown.png</file>
+        <file>images/p_frame_interval_box.png</file>
+        <file>images/p_frame_interval_down.png</file>
+        <file>images/p_frame_interval_up.png</file>
+        <file>images/pline_dropdown.png</file>
+        <file>images/plinefreq_box_backup.png</file>
+        <file>images/plinefreq_box.png</file>
+        <file>images/quality_dragger.png</file>
+        <file>images/record_stop.png</file>
+        <file>images/record.png</file>
+        <file>images/scrollbar.png</file>
+        <file>images/Scroller_bg.png</file>
+        <file>images/scroller.png</file>
+        <file>images/selection_bg.png</file>
+        <file>images/serial_no_selected.png</file>
+        <file>images/sharpness_box.png</file>
+        <file>images/side_bar_bg.png</file>
+        <file>images/single_trigger_box.png</file>
+        <file>images/single_trigger_dropdown.png</file>
+        <file>images/slider.png</file>
+        <file>images/still_box.png</file>
+        <file>images/still_capture_pin.png</file>
+        <file>images/still_properties.png</file>
+        <file>images/stillcapturesettings.png</file>
+        <file>images/toggle_border.png</file>
+        <file>images/toggle_selection.png</file>
+        <file>images/up_arrow.png</file>
+        <file>images/up-arrow.png</file>
+        <file>images/value_box.png</file>
+        <file>images/Vertical_down_arrow.png</file>
+        <file>images/Vertical_Scroll_base.png</file>
+        <file>images/Vertical_scroller.png</file>
+        <file>images/Vertical_top_arrow.png</file>
+        <file>images/Video Capture Filter.png</file>
+        <file>images/Video capture property.png</file>
+        <file>images/video_btn.png</file>
+        <file>images/video_capture_box.png</file>
+        <file>images/video_capture_filter_bck.png</file>
+        <file>images/video_capture_filter.png</file>
+        <file>images/video_capturepin.png</file>
+        <file>images/video_renderer.png</file>
+        <file>images/video_selected.png</file>
+        <file>images/video_standard_box.png</file>
+        <file>images/videocapturesettings.png</file>
     </qresource>
 </RCC>
