+ Add new image to open Camera Preview Window + Add new window that can be spawned to show camera output

--- a/images.qrc
+++ b/images.qrc
@@ -8,5 +8,6 @@
         <file>images/resetCamera.png</file>
         <file>images/takePicture.png</file>
         <file>images/print.png</file>
+        <file>images/look.png</file>
     </qresource>
 </RCC>
